--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,14 +1,8 @@
 .footer-custom {
-  left: 0;
   padding-left: 40px;
-  bottom: 0;
-  width: 100%;
   background-color: #5A7BB6;
   color: white;
   text-align: left;
-  height: 10vh;
-  font-family: 'Nunito', sans-serif;
-  margin: 0 auto;
 }
 
 .contact-info-header{
@@ -19,6 +13,7 @@
 
 .contact-info{
   padding-top: 0.5vh;
+  padding-bottom: 1.4vh;
   font-size: 16px;
   margin: 0 auto;
 }
