--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body{
-  width:100vw;
-  overflow-x: hidden;
+  margin: 0;
+  height: 100%;
 }
 body{
-  position: relative;
   background: #EEEEEE;
   font-family: 'Nunito', sans-serif;
-  min-height: 100vh;
 }
 .mat-simple-snackbar > span {
   width: 100%;
